lib/antlr_generated/strace/StraceParser.py
# Generated from StraceParser.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class StraceParser ( Parser ):

    grammarFileName = "StraceParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'<... '", "' resumed>'", "'<unfinished ...>'", 
                     "'<... resuming interrupted futex ...>'", "'---'", 
                     "'+++'", "'exited with'", "'killed by'", "'TRUNCATED'", 
                     "'('", "')'", "'='", "<INVALID>", "'?'", "'~'", "<INVALID>", 
                     "<INVALID>", "'{'", "'}'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'=>'", "'NULL'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'...'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "':['", "<INVALID>", "'NETLINK'" ]

    symbolicNames = [ "<INVALID>", "WHITESPACE", "OMITTED_ARGUMENTS", "COMMENT", 
                      "NEWLINE", "RESUMED_START", "RESUMED_END", "UNFINISHED", 
                      "RESUME_INTERRUPTED_FUTEX", "SIGNAL_DELIMITER", "EXIT_DELIMITER", 
                      "EXITED_WITH", "KILLED_BY", "TRUNCATED", "LEFT_PARENTHESIS", 
                      "RIGHT_PARENTHESIS", "EQUALS", "COMMA", "QUESTION_MARK", 
                      "TILDE", "LEFT_BRACKET", "RIGHT_BRACKET", "LEFT_CURLY_BRACKET", 
                      "RIGHT_CURLY_BRACKET", "FD_LEFT_ANGLE_BRACKET", "COLON", 
                      "SINGLE_ARROW", "DOUBLE_ARROW", "NULL", "NUMBER", 
                      "BOOLEAN_BINARY_OPERATOR", "NUMERIC_BINARY_OPERATOR", 
                      "ELLIPSIS", "IDENTIFIER", "STRING", "FD_WHITESPACE", 
                      "DEV_LEFT_ANGLE_BRACKET", "FD_RIGHT_ANGLE_BRACKET", 
                      "FD_INFO_OPEN", "FD_SOCKET_PROTOCOL", "FD_SOCKET_PROTOCOL_NETLINK", 
                      "FD_CHARACTER", "DEV_WHITESPACE", "DEV_RIGHT_ANGLE_BRACKET", 
                      "DEV_COLON", "DEV_NUMBER", "DEV_TEXT", "FD_INFO_LEFT_BRACKET", 
                      "FD_INFO_RIGHT_BRACKET", "FD_INFO_COLON", "FD_INFO_COMMA", 
                      "FD_INFO_REFERENCE", "FD_INFO_NUMBER", "FD_INFO_IPV4", 
                      "FD_INFO_IPV6", "FD_INFO_IPV6_ADDR", "FD_INFO_NETLINK_PROTOCOL", 
                      "FD_INFO_FILENAME" ]

    RULE_strace = 0
    RULE_trace_line = 1
    RULE_syscall = 2
    RULE_syscall_start = 3
    RULE_syscall_arguments = 4
    RULE_syscall_argument = 5
    RULE_syscall_end = 6
    RULE_syscall_resumed = 7
    RULE_syscall_unfinished = 8
    RULE_signal = 9
    RULE_exit_statement = 10
    RULE_literal = 11
    RULE_literal_value = 12
    RULE_mapping = 13
    RULE_literal_list = 14
    RULE_collection = 15
    RULE_file_descriptor = 16
    RULE_device_info = 17
    RULE_inode_info = 18
    RULE_ip_info = 19
    RULE_ip_addr = 20
    RULE_netlink_info = 21
    RULE_function_call = 22
    RULE_numeric_expression = 23
    RULE_boolean_expression = 24
    RULE_return_value = 25
    RULE_return_notes = 26

    ruleNames =  [ "strace", "trace_line", "syscall", "syscall_start", "syscall_arguments", 
                   "syscall_argument", "syscall_end", "syscall_resumed", 
                   "syscall_unfinished", "signal", "exit_statement", "literal", 
                   "literal_value", "mapping", "literal_list", "collection", 
                   "file_descriptor", "device_info", "inode_info", "ip_info", 
                   "ip_addr", "netlink_info", "function_call", "numeric_expression", 
                   "boolean_expression", "return_value", "return_notes" ]

    EOF = Token.EOF
    WHITESPACE=1
    OMITTED_ARGUMENTS=2
    COMMENT=3
    NEWLINE=4
    RESUMED_START=5
    RESUMED_END=6
    UNFINISHED=7
    RESUME_INTERRUPTED_FUTEX=8
    SIGNAL_DELIMITER=9
    EXIT_DELIMITER=10
    EXITED_WITH=11
    KILLED_BY=12
    TRUNCATED=13
    LEFT_PARENTHESIS=14
    RIGHT_PARENTHESIS=15
    EQUALS=16
    COMMA=17
    QUESTION_MARK=18
    TILDE=19
    LEFT_BRACKET=20
    RIGHT_BRACKET=21
    LEFT_CURLY_BRACKET=22
    RIGHT_CURLY_BRACKET=23
    FD_LEFT_ANGLE_BRACKET=24
    COLON=25
    SINGLE_ARROW=26
    DOUBLE_ARROW=27
    NULL=28
    NUMBER=29
    BOOLEAN_BINARY_OPERATOR=30
    NUMERIC_BINARY_OPERATOR=31
    ELLIPSIS=32
    IDENTIFIER=33
    STRING=34
    FD_WHITESPACE=35
    DEV_LEFT_ANGLE_BRACKET=36
    FD_RIGHT_ANGLE_BRACKET=37
    FD_INFO_OPEN=38
    FD_SOCKET_PROTOCOL=39
    FD_SOCKET_PROTOCOL_NETLINK=40
    FD_CHARACTER=41
    DEV_WHITESPACE=42
    DEV_RIGHT_ANGLE_BRACKET=43
    DEV_COLON=44
    DEV_NUMBER=45
    DEV_TEXT=46
    FD_INFO_LEFT_BRACKET=47
    FD_INFO_RIGHT_BRACKET=48
    FD_INFO_COLON=49
    FD_INFO_COMMA=50
    FD_INFO_REFERENCE=51
    FD_INFO_NUMBER=52
    FD_INFO_IPV4=53
    FD_INFO_IPV6=54
    FD_INFO_IPV6_ADDR=55
    FD_INFO_NETLINK_PROTOCOL=56
    FD_INFO_FILENAME=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StraceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(StraceParser.NEWLINE)
            else:
                return self.getToken(StraceParser.NEWLINE, i)

        def trace_line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(StraceParser.Trace_lineContext)
            else:
                return self.getTypedRuleContext(StraceParser.Trace_lineContext,i)


        def TRUNCATED(self):
            return self.getToken(StraceParser.TRUNCATED, 0)

        def getRuleIndex(self):
            return StraceParser.RULE_strace

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStrace" ):
                return visitor.visitStrace(self)
            else:
                return visitor.visitChildren(self)




    def strace(self):

        localctx = StraceParser.StraceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_strace)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 54
                    self.match(StraceParser.NEWLINE) 
                self.state = 59
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << StraceParser.RESUMED_START) | (1 << StraceParser.SIGNAL_DELIMITER) | (1 << StraceParser.EXIT_DELIMITER) | (1 << StraceParser.NUMBER) | (1 << StraceParser.IDENTIFIER))) != 0):
                self.state = 60
                self.trace_line()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==StraceParser.TRUNCATED:
                self.state = 66
                self.match(StraceParser.TRUNCATED)


            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==StraceParser.NEWLINE:
                self.state = 69
                self.match(StraceParser.NEWLINE)
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Trace_lineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(StraceParser.NEWLINE, 0)

        def syscall(self):
            return self.getTypedRuleContext(StraceParser.SyscallContext,0)


        def signal(self):
            return self.getTypedRuleContext(StraceParser.SignalContext,0)


        def exit_statement(self):
            return self.getTypedRuleContext(StraceParser.Exit_statementContext,0)


        def NUMBER(self):
            return self.getToken(StraceParser.NUMBER, 0)

        def getRuleIndex(self):
            return StraceParser.RULE_trace_line

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTrace_line" ):
                return visitor.visitTrace_line(self)
            else:
                return visitor.visitChildren(self)




    def trace_line(self):

        localctx = StraceParser.Trace_lineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_trace_line)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==StraceParser.NUMBER:
                self.state = 75
                self.match(StraceParser.NUMBER)


            self.state = 81
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [StraceParser.RESUMED_START, StraceParser.IDENTIFIER]:
                self.state = 78
                self.syscall()
                pass
            elif token in [StraceParser.SIGNAL_DELIMITER]:
                self.state = 79
                self.signal()
                pass
            elif token in [StraceParser.EXIT_DELIMITER]:
                self.state = 80
                self.exit_statement()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 83
            self.match(StraceParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SyscallContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def syscall_start(self):
            return self.getTypedRuleContext(StraceParser.Syscall_startContext,0)


        def syscall_end(self):
            return self.getTypedRuleContext(StraceParser.Syscall_endContext,0)


        def syscall_arguments(self):
            return self.getTypedRuleContext(StraceParser.Syscall_argumentsContext,0)


        def syscall_unfinished(self):
            return self.getTypedRuleContext(StraceParser.Syscall_unfinishedContext,0)


        def syscall_resumed(self):
            return self.getTypedRuleContext(StraceParser.Syscall_resumedContext,0)


        def mapping(self):
            return self.getTypedRuleContext(StraceParser.MappingContext,0)


        def getRuleIndex(self):
            return StraceParser.RULE_syscall

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSyscall" ):
                return visitor.visitSyscall(self)
            else:
                return visitor.visitChildren(self)




    def syscall(self):

        localctx = StraceParser.SyscallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_syscall)
        self._la = 0 # Token type
        try:
            self.state = 106
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 85
                self.syscall_start()
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << StraceParser.OMITTED_ARGUMENTS) | (1 << StraceParser.LEFT_PARENTHESIS) | (1 << StraceParser.TILDE) | (1 << StraceParser.LEFT_BRACKET) | (1 << StraceParser.LEFT_CURLY_BRACKET) | (1 << StraceParser.DOUBLE_ARROW) | (1 << StraceParser.NULL) | (1 << StraceParser.NUMBER) | (1 << StraceParser.IDENTIFIER) | (1 << StraceParser.STRING))) != 0):
                    self.state = 86
                    self.syscall_arguments()


                self.state = 89
                self.syscall_end()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.syscall_start()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << StraceParser.OMITTED_ARGUMENTS) | (1 << StraceParser.LEFT_PARENTHESIS) | (1 << StraceParser.TILDE) | (1 << StraceParser.LEFT_BRACKET) | (1 << StraceParser.LEFT_CURLY_BRACKET) | (1 << StraceParser.DOUBLE_ARROW) | (1 << StraceParser.NULL) | (1 << StraceParser.NUMBER) | (1 << StraceParser.IDENTIFIER) | (1 << StraceParser.STRING))) != 0):
                    self.state = 92
                    self.syscall_arguments()


                self.state = 95
                self.syscall_unfinished()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 97
                self.syscall_resumed()
                self.state = 99
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 98
                    self.mapping()


                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << StraceParser.OMITTED_ARGUMENTS) | (1 << StraceParser.LEFT_PARENTHESIS) | (1 << StraceParser.TILDE) | (1 << StraceParser.LEFT_BRACKET) | (1 << StraceParser.LEFT_CURLY_BRACKET) | (1 << StraceParser.DOUBLE_ARROW) | (1 << StraceParser.NULL) | (1 << StraceParser.NUMBER) | (1 << StraceParser.IDENTIFIER) | (1 << StraceParser.STRING))) != 0):
                    self.state = 101
                    self.syscall_arguments()


                self.state = 104
                self.syscall_end()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Syscall_startContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(StraceParser.IDENTIFIER, 0)

        def LEFT_PARENTHESIS(self):
            return self.getToken(StraceParser.LEFT_PARENTHESIS, 0)

        def getRuleIndex(self):
            return StraceParser.RULE_syscall_start

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSyscall_start" ):
                return visitor.visitSyscall_start(self)
            else:
                return visitor.visitChildren(self)




    def syscall_start(self):

        localctx = StraceParser.Syscall_startContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_syscall_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(StraceParser.IDENTIFIER)
            self.state = 109
            self.match(StraceParser.LEFT_PARENTHESIS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Syscall_argumentsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def syscall_argument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(StraceParser.Syscall_argumentContext)
            else:
                return self.getTypedRuleContext(StraceParser.Syscall_argumentContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(StraceParser.COMMA)
            else:
                return self.getToken(StraceParser.COMMA, i)

        def ELLIPSIS(self):
            return self.getToken(StraceParser.ELLIPSIS, 0)

        def getRuleIndex(self):
            return StraceParser.RULE_syscall_arguments

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSyscall_arguments" ):
                return visitor.visitSyscall_arguments(self)
            else:
                return visitor.visitChildren(self)




    def syscall_arguments(self):

        localctx = StraceParser.Syscall_argumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_syscall_arguments)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.syscall_argument()
            self.state = 116
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 112
                    self.match(StraceParser.COMMA)
                    self.state = 113
                    self.syscall_argument() 
                self.state = 118
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 119
                self.match(StraceParser.COMMA)
                self.state = 120
                self.match(StraceParser.ELLIPSIS)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Syscall_argumentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(StraceParser.LiteralContext,0)


        def OMITTED_ARGUMENTS(self):
            return self.getToken(StraceParser.OMITTED_ARGUMENTS, 0)

        def getRuleIndex(self):
            return StraceParser.RULE_syscall_argument

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSyscall_argument" ):
                return visitor.visitSyscall_argument(self)
            else:
                return visitor.visitChildren(self)




    def syscall_argument(self):

        localctx = StraceParser.Syscall_argumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_syscall_argument)
        try:
            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [StraceParser.LEFT_PARENTHESIS, StraceParser.TILDE, StraceParser.LEFT_BRACKET, StraceParser.LEFT_CURLY_BRACKET, StraceParser.DOUBLE_ARROW, StraceParser.NULL, StraceParser.NUMBER, StraceParser.IDENTIFIER, StraceParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.literal()
                pass
            elif token in [StraceParser.OMITTED_ARGUMENTS]:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.match(StraceParser.OMITTED_ARGUMENTS)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Syscall_endContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RIGHT_PARENTHESIS(self):
            return self.getToken(StraceParser.RIGHT_PARENTHESIS, 0)

        def EQUALS(self):
            return self.getToken(StraceParser.EQUALS, 0)

        def return_value(self):
            return self.getTypedRuleContext(StraceParser.Return_valueContext,0)


        def getRuleIndex(self):
            return StraceParser.RULE_syscall_end

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSyscall_end" ):
                return visitor.visitSyscall_end(self)
            else:
                return visitor.visitChildren(self)




    def syscall_end(self):

        localctx = StraceParser.Syscall_endContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_syscall_end)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(StraceParser.RIGHT_PARENTHESIS)
            self.state = 128
            self.match(StraceParser.EQUALS)
            self.state = 129
            self.return_value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Syscall_resumedContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RESUMED_START(self):
            return self.getToken(StraceParser.RESUMED_START, 0)

        def IDENTIFIER(self):
            return self.getToken(StraceParser.IDENTIFIER, 0)

        def RESUMED_END(self):
            return self.getToken(StraceParser.RESUMED_END, 0)

        def COMMA(self):
            return self.getToken(StraceParser.COMMA, 0)

        def getRuleIndex(self):
            return StraceParser.RULE_syscall_resumed

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSyscall_resumed" ):
                return visitor.visitSyscall_resumed(self)
            else:
                return visitor.visitChildren(self)




    def syscall_resumed(self):

        localctx = StraceParser.Syscall_resumedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_syscall_resumed)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(StraceParser.RESUMED_START)
            self.state = 132
            self.match(StraceParser.IDENTIFIER)
            self.state = 133
            self.match(StraceParser.RESUMED_END)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==StraceParser.COMMA:
                self.state = 134
                self.match(StraceParser.COMMA)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Syscall_unfinishedContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UNFINISHED(self):
            return self.getToken(StraceParser.UNFINISHED, 0)

        def COMMA(self):
            return self.getToken(StraceParser.COMMA, 0)

        def getRuleIndex(self):
            return StraceParser.RULE_syscall_unfinished

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSyscall_unfinished" ):
                return visitor.visitSyscall_unfinished(self)
            else:
                return visitor.visitChildren(self)




    def syscall_unfinished(self):

        localctx = StraceParser.Syscall_unfinishedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_syscall_unfinished)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==StraceParser.COMMA:
                self.state = 137
                self.match(StraceParser.COMMA)


            self.state = 140
            self.match(StraceParser.UNFINISHED)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SignalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SIGNAL_DELIMITER(self, i:int=None):
            if i is None:
                return self.getTokens(StraceParser.SIGNAL_DELIMITER)
            else:
                return self.getToken(StraceParser.SIGNAL_DELIMITER, i)

        def IDENTIFIER(self):
            return self.getToken(StraceParser.IDENTIFIER, 0)

        def collection(self):
            return self.getTypedRuleContext(StraceParser.CollectionContext,0)


        def getRuleIndex(self):
            return StraceParser.RULE_signal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSignal" ):
                return visitor.visitSignal(self)
            else:
                return visitor.visitChildren(self)




    def signal(self):

        localctx = StraceParser.SignalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_signal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(StraceParser.SIGNAL_DELIMITER)
            self.state = 143
            self.match(StraceParser.IDENTIFIER)
            self.state = 144
            self.collection()
            self.state = 145
            self.match(StraceParser.SIGNAL_DELIMITER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exit_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXIT_DELIMITER(self, i:int=None):
            if i is None:
                return self.getTokens(StraceParser.EXIT_DELIMITER)
            else:
                return self.getToken(StraceParser.EXIT_DELIMITER, i)

        def EXITED_WITH(self):
            return self.getToken(StraceParser.EXITED_WITH, 0)

        def NUMBER(self):
            return self.getToken(StraceParser.NUMBER, 0)

        def KILLED_BY(self):
            return self.getToken(StraceParser.KILLED_BY, 0)

        def IDENTIFIER(self):
            return self.getToken(StraceParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return StraceParser.RULE_exit_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExit_statement" ):
                return visitor.visitExit_statement(self)
            else:
                return visitor.visitChildren(self)




    def exit_statement(self):

        localctx = StraceParser.Exit_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_exit_statement)
        try:
            self.state = 155
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.match(StraceParser.EXIT_DELIMITER)
                self.state = 148
                self.match(StraceParser.EXITED_WITH)
                self.state = 149
                self.match(StraceParser.NUMBER)
                self.state = 150
                self.match(StraceParser.EXIT_DELIMITER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.match(StraceParser.EXIT_DELIMITER)
                self.state = 152
                self.match(StraceParser.KILLED_BY)
                self.state = 153
                self.match(StraceParser.IDENTIFIER)
                self.state = 154
                self.match(StraceParser.EXIT_DELIMITER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal_value(self):
            return self.getTypedRuleContext(StraceParser.Literal_valueContext,0)


        def IDENTIFIER(self):
            return self.getToken(StraceParser.IDENTIFIER, 0)

        def EQUALS(self):
            return self.getToken(StraceParser.EQUALS, 0)

        def mapping(self):
            return self.getTypedRuleContext(StraceParser.MappingContext,0)


        def getRuleIndex(self):
            return StraceParser.RULE_literal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral" ):
                return visitor.visitLiteral(self)
            else:
                return visitor.visitChildren(self)




    def literal(self):
